# agent-os

./: .gitignore  Cargo.toml  Dockerfile  config.yaml
agentd/: Cargo.toml
agentd/src/: agents.rs  audit.rs  context.rs  crypto.rs  executor.rs  filewatcher.rs  guardian.rs  health.rs  input.rs  intent.rs  knowledge.rs  main.rs  mcp.rs  memory.rs  oauth.rs  planner.rs  sync.rs  toolforge.rs  tools.rs  voice.rs
agentd/src/connectors/: google.rs  mod.rs  outlook.rs
agentd/src/llm/: claude.rs  mod.rs  ollama.rs  openai.rs
agentd/tests/: ipc_integration.rs
common/: Cargo.toml
common/src/: config.rs  ipc.rs  lib.rs  types.rs
debian/: agent-fs.service  agentd.service  agentos.desktop  control  postinst
fs/: Cargo.toml
fs/src/: embedder.rs  fuse_layer.rs  indexer.rs  ipc_server.rs  main.rs  search.rs  storage.rs  watcher.rs
fs/src/connectors/: email.rs  mcp.rs  mod.rs
scripts/: build-deb.sh  test-agentd.sh
shell/: Cargo.toml
shell/src/: main.rs
