[workspace]
members = ["common", "agentd", "shell", "fs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Serializzazione
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errori
anyhow = "1"
thiserror = "2"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Chrono per timestamp
chrono = { version = "0.4", features = ["serde"] }
