[package]
name = "agentos-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tipi condivisi e protocollo IPC per AgentOS"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
