[package]
name = "agent-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AgentOS filesystem semantico FUSE"

[dependencies]
agentos-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# SQLite per indice e vettori
rusqlite = { version = "0.32", features = ["bundled"] }

# File watcher
notify = "7"

# Directory utente
dirs = "6"

# Walk ricorsivo directory
walkdir = "2"
