[package]
name = "agent-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AgentOS CLI — interactive terminal agent"

[[bin]]
name = "agentos"
path = "src/main.rs"

[dependencies]
agentos-common = { path = "../common" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
